4.2-0 (7/2/2015)
-----
Imports fixed to comply with the new CRAN policy.

In the manual, a few citations updated.

In tfr.trajectories.plot input to rgb divided by 255 
(it was not working for other color than black - 
thanks to Patrick Gerland for finding the bug and fixing it).

Bug fix in creating thinned MCMCs for extra countries.

Default of b.width in run.tfr.mcmc changed to 0.05
(previous value of 0.02 caused some chains to be stuck)

4.1-0/1 (1/14/2015) [CRAN]
------
Added option of overwriting UNlocations file, i.e. easily include new countries in simulations. 
For this, function run.tfr.mcmc got an argument "my.locations.file".

4.0-11 (11/21/2014) [CRAN]
------
Removed usage of snow functions since CRAN doesn't like them.

4.0-10 (11/19/2014)
------
Fixed bug in imputing values.

Added South Sudan to iso3166; UN code for Sudan updated. 

4.0-8/9 (10/30/2014) [CRAN]
------
Removed 'require' calls.

4.0-7 (10/29/2014) 
------
Accept 'name' as a column name in the tfr dataset. 

4.0-6 (10/28/2014)
------
Bug fixed that caused parameters for parallel processing not being passed to continue.tfr.mcmc if iter='auto'.

run.tfr3.mcmc returns NULL if no country is in phase III (before it failed with error). 

4.0-4/5 (02/07/2014) [CRAN]
-------
Added an option for switching the method for finding the beginning of phase II (tau_c) 
to the method prior version 2.0 (for reproducibility of former experiments). To turn it on, use 
options(TFRphase2.pre.v2=TRUE)

DLcurve.plot got an argument show.legend (thanks to Guy Abel).

In tfr.predict fixed a situation when after 50 iterations tfr is still falling below 0.5. 

4.0-2/3 (10/9/2013) [CRAN]
-----
Setting default cluster type to SOCK if not MPI or SOCK. 

Dependencies shuffled between Depndes and Imports.

4.0-1 (7/18/2013) [CRAN]
-----
Default for wpp.year set to 2012. Package wpp2012 added to dependencies.

4.0-0 (5/23/2013) [CRAN]
-----