@@ -16,7 +16,7 @@ tfr.trajectories.plot(tfr.pred, country, pi = c(80, 95),
     mark.estimation.points = FALSE,
     xlim = NULL, ylim = NULL, type = 'b', xlab = 'Year', ylab = 'TFR', 
     main = NULL, lwd = c(2, 2, 2, 2, 2, 1), 
-    col=c('black', 'green', 'red', 'red', 'blue', 'gray'),
+    col=c('black', 'green', 'red', 'red', 'blue', '#00000020'),
     show.legend = TRUE, add = FALSE, \dots)
 	
 tfr.trajectories.plot.all(tfr.pred, 
