@@ -1,5 +1,9 @@
 4.2-0 (7/2/2015)
 -----
+MCMC outputs now also for back-transformed parameters Triangle_c1-3.
+
+Plotted trajectories are shown in a transparent color.
+
 Imports fixed to comply with the new CRAN policy.
 
 In the manual, a few citations updated.
